--- a/Model/Transformer_Chatbot.ipynb
+++ b/Model/Transformer_Chatbot.ipynb
@@ -5,12 +5,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "IJ46b7EX_9-C",
         "dni9UQeR_s9A",
         "FPsgVrZh_0U5"
       ],
       "mount_file_id": "1Vc3jZml7wS5JTvknhAA6YLaCPkYpVef0",
-      "authorship_tag": "ABX9TyPeKkH5MAEKfwIgiDPjF6Mn",
+      "authorship_tag": "ABX9TyOC+5Rnl+hHxTgYdsbfxP/j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "niwCvt_km_5z",
-        "outputId": "26842c75-ef47-42df-e5ec-4e4967fcbed9"
+        "outputId": "fb3ea45a-f6b6-450e-f450-8af557958021"
       },
       "execution_count": null,
       "outputs": [
@@ -85,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IA-ZkQhknBMa",
-        "outputId": "23d3d42a-8ddc-4608-fe8f-04e6976149cc"
+        "outputId": "b057b85e-13ea-42d0-bcef-2748802aab15"
       },
       "execution_count": null,
       "outputs": [
@@ -108,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yEXE23tmnCo6",
-        "outputId": "4db7c214-adf4-4e29-abac-d52c33ee7d87"
+        "outputId": "6c0a0c14-3e62-48da-b533-fd9ec8aabf9a"
       },
       "execution_count": null,
       "outputs": [
@@ -159,7 +158,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NIwio5umoM8o",
-        "outputId": "63ee11dc-7408-4810-eae3-6acac52eb2a4"
+        "outputId": "9c9a961f-9c6e-493f-cdca-e699d4756b67"
       },
       "execution_count": null,
       "outputs": [
@@ -170,7 +169,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting torchtext==0.6\n",
             "  Downloading torchtext-0.6.0-py3-none-any.whl (64 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (4.65.0)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (2.27.1)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (2.0.1+cu118)\n",
@@ -178,7 +177,7 @@
             "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (1.16.0)\n",
             "Collecting sentencepiece (from torchtext==0.6)\n",
             "  Downloading sentencepiece-0.1.99-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m26.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m16.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (1.26.15)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (2022.12.7)\n",
             "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (2.0.12)\n",
@@ -282,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hvy11Aq4oe5x",
-        "outputId": "69631706-5088-4916-c2fb-0ab1ff24a26b"
+        "outputId": "6aca2096-a44d-489d-d2b3-4d1354353508"
       },
       "execution_count": null,
       "outputs": [
@@ -296,7 +295,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -377,7 +376,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KSIEl3oCotMB",
-        "outputId": "37854bc6-9507-4c5a-b3c6-329fd3bff35e"
+        "outputId": "f9036293-8543-443a-ef8c-bb005d91acd2"
       },
       "execution_count": null,
       "outputs": [
@@ -394,7 +393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 18
         }
       ]
     },
@@ -408,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FABPp1jYoupe",
-        "outputId": "d68fc4c7-4f6b-4bd6-cabd-68cb0dde0d4e"
+        "outputId": "ea9a6536-3571-4823-98b4-188a43a16566"
       },
       "execution_count": null,
       "outputs": [
@@ -425,7 +424,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 19
         }
       ]
     },
@@ -439,7 +438,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lAjiNjlCoxM5",
-        "outputId": "be6d35b4-aac8-4c99-e95b-4752786b2464"
+        "outputId": "bd407290-7ae7-4b82-822a-e90fdcdfc64b"
       },
       "execution_count": null,
       "outputs": [
@@ -456,7 +455,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 20
         }
       ]
     },
@@ -567,7 +566,7 @@
           "height": 473
         },
         "id": "vOrVe4H62MlY",
-        "outputId": "75a12879-a108-42e6-a2a9-ca5e6d5923f8"
+        "outputId": "37a388c6-a41b-480c-b238-21e094e6c60e"
       },
       "execution_count": null,
       "outputs": [
@@ -579,7 +578,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
@@ -1030,7 +1029,12 @@
         "    masked_score = score+mask # ( batch_size, num_haed, max_len, max_len )\n",
         "    attention = torch.matmul(self.softmax(masked_score), v ) # ( batch_size, num_haed, max_len, depth )\n",
         "\n",
-        "    "
+        "    # Concat and Linear\n",
+        "    pre_permute = attention.permute(0,2,1,3) # ( batch_size, max_len, num_head, depth )\n",
+        "    z = pre_permute.view(pre_permute.size()[0],-1,self.d_model) # ( batch_size, max_len, emb_dim )\n",
+        "    z = self.final_Linear(z)\n",
+        "\n",
+        "    return z # ( batch_size, max_len, emb_dim )  <= q,k,v of next Encoder "
       ],
       "metadata": {
         "id": "1OWfynWhJtxC"
@@ -1062,7 +1066,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3hlXy366DJLJ",
-        "outputId": "cf742abf-7b76-4756-9da5-1e9bf3f0826a"
+        "outputId": "bce7c844-b3dc-4b2b-d800-5ae508da9ab6"
       },
       "execution_count": null,
       "outputs": [
@@ -1109,6 +1113,50 @@
     {
       "cell_type": "code",
       "source": [
+        "d=c.permute(0,2,1,3)\n",
+        "print(d,d.size(),sep='\\n')\n",
+        "e=d.view(d.size()[0],-1,4)\n",
+        "print(e,e.size(),sep='\\n')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XwnLGD4_675M",
+        "outputId": "ff25ad6b-96bf-4ca2-efa8-c4db7d2b972d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[[ 1.,  2.],\n",
+            "          [ 3.,  4.]],\n",
+            "\n",
+            "         [[ 4.,  5.],\n",
+            "          [ 6.,  7.]]],\n",
+            "\n",
+            "\n",
+            "        [[[ 7.,  8.],\n",
+            "          [ 9., 10.]],\n",
+            "\n",
+            "         [[10., 11.],\n",
+            "          [12., 13.]]]])\n",
+            "torch.Size([2, 2, 2, 2])\n",
+            "tensor([[[ 1.,  2.,  3.,  4.],\n",
+            "         [ 4.,  5.,  6.,  7.]],\n",
+            "\n",
+            "        [[ 7.,  8.,  9., 10.],\n",
+            "         [10., 11., 12., 13.]]])\n",
+            "torch.Size([2, 2, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "c.transpose(2,3)/10"
       ],
       "metadata": {
@@ -1144,20 +1192,107 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Feed Forward Network"
+      ],
+      "metadata": {
+        "id": "QpmWX7s5_QPG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def FeedForward(**kargs):\n",
+        "    return nn.Sequential(nn.Linear(kargs['d_model'],kargs['ffn_dim']),\n",
+        "                         nn.ReLU(),\n",
+        "                         nn.Linear(kargs['ffn_dim'],kargs['d_model'])) # ( batch_size, max_len, emb_dim )"
+      ],
+      "metadata": {
+        "id": "zNTZnLAT_PkX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Encoder"
+      ],
+      "metadata": {
+        "id": "n-72XPENJi13"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encoder Layer"
+      ],
+      "metadata": {
+        "id": "8W9Fy0OE70h3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class EncoderLayer(nn.Module):\n",
         "  def __init__(self,**kargs):\n",
         "    super(EncoderLayer,self).__init__()\n",
+        "\n",
+        "    self.mha=MultiheadAttention(**kargs)\n",
+        "    self.ffn=FeedForward(**kargs)\n",
+        "\n",
+        "    self.Norm1=nn.LayerNorm(kargs['d_model'],eps=1e-6)\n",
+        "    self.Norm2=nn.LayerNorm(kargs['d_model'],eps=1e-6)\n",
+        "\n",
+        "    self.dropout1=nn.Dropout(kargs['p_rate'])\n",
+        "    self.dropout2=nn.Dropout(kargs['p_rate'])\n",
+        "\n",
+        "  def forward(self,x,mask):\n",
+        "    # x = ( batch_size, max_len, emb_dim )\n",
+        "    # mask = ( batch_size, 1, 1, max_len ) or ( batch_size, 1, max_len, max_len )\n",
+        "    post_mha=self.mha(x,x,x,mask) # Multi-head Attention  # ( batch_size, max_len, emb_dim )\n",
+        "    post_mha=self.dropout1(post_mha)\n",
+        "    post_add_norm=self.Norm1(x+post_mha) # Add&Norm  # ( batch_size, max_len, emb_dim )\n",
+        "\n",
+        "    post_ffn = self.FeedForward(post_add_norm) # ( batch_size, max_len, emb_dim )\n",
+        "    post_ffn = self.dropout2(post_ffn)\n",
+        "\n",
+        "    output = self.Norm2(post_add_norm+post_ffn) # ( batch_size, max_len, emb_dim )\n",
         "    \n",
-        "    \n",
-        "    "
+        "    return output # ( batch_size, max_len, emb_dim )"
       ],
       "metadata": {
-        "id": "1sCt7xvdsku0"
+        "id": "1sCt7xvdsku0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        },
+        "outputId": "a1d73917-ed2c-4675-cb65-1e6252e3435e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-125b2de4851f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mEncoderLayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEncoderLayer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mMultiheadAttention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encoder"
+      ],
+      "metadata": {
+        "id": "S3Qyxh8rJWe1"
+      }
     },
     {
       "cell_type": "code",
@@ -1166,14 +1301,56 @@
         "  def __init__(self,**kargs):\n",
         "    super(Encoder,self).__init__()\n",
         "    self.embedding=nn.Embedding(kargs['vocab_size'],kargs['emb_dim'])\n",
-        "    self.pe=positional_encoding(kargs['max_len'],kargs['emb_dim'])\n",
+        "    self.pe=positional_encoding(kargs['max_len'],kargs['emb_dim']) # PE : ( 1, max_len, d_model )\n",
         "    self.dropout=nn.Dropout(kargs['p_rate'])\n",
         "\n",
-        "    self.encoder=[ EncoderLayer()\n",
-        "\n"
+        "    self.encoder=[ EncoderLayer(**kargs) for _ in range(kargs['num_layers']) ]\n",
+        "\n",
+        "  def forward(self,inp,mask):\n",
+        "      # inp = ( batch_size, max_len )\n",
+        "      # mask = ( batch_size, 1, 1, max_len ) or ( batch_size, 1, max_len, max_len )\n",
+        "      post_emb = self.embedding(inp) # ( batch_size, max_len, emb_dim )\n",
+        "      post_emb*=math.sqrt(kargs['d_model'])\n",
+        "      x+=self.pe # ( batch_size, max_len, emb_dim )\n",
+        "\n",
+        "      for enc_layer in self.encoder:\n",
+        "        x = enc_layer(x,mask)\n",
+        "\n",
+        "      return x # ( batch_size, max_len, emb_dim )"
       ],
       "metadata": {
         "id": "4quNkMUmsQ4X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Decoder"
+      ],
+      "metadata": {
+        "id": "ZBZZA-ymJbvE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DecoderLayer(nn.Module):\n",
+        "  def __init__(self,**kargs):\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "nky4RGjjMzJl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Djd8KXG_P3sI"
       },
       "execution_count": null,
       "outputs": []
