--- a/Model/GPT_2/GPT2_GEN.ipynb
+++ b/Model/GPT_2/GPT2_GEN.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiHE+BUduBTQtcU/9nF7AB",
+      "mount_file_id": "1jLd3fgb_ouffcYMR_qbngEdXeBW7cdyx",
+      "authorship_tag": "ABX9TyPyKJxerUyf3PG7BDbfUeKh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,523 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Sentencepiece : https://github.com/google/sentencepiece/blob/master/python/README.md"
+      ],
       "metadata": {
-        "id": "tnIAhr384C9k"
+        "id": "e33Dl5K-J_8S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### NSMC"
+      ],
+      "metadata": {
+        "id": "GC2mkEpqPcB8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import urllib"
+      ],
+      "metadata": {
+        "id": "GAhQpLHSKpwQ"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "urllib.request.urlretrieve('https://raw.githubusercontent.com/e9t/nsmc/master/ratings_train.txt','train.txt')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FZGWRVyXKZjN",
+        "outputId": "31f36a49-3022-4dbc-8042-3da3bb39a9ad"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('train.txt', <http.client.HTTPMessage at 0x7fdd6c8720e0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp=[]"
+      ],
+      "metadata": {
+        "id": "_D-LYLxqLhUP"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('train.txt','r') as f:\n",
+        "  f.readline()\n",
+        "  for sent in f.readlines():\n",
+        "    data = sent.split('\\t')\n",
+        "    temp.append(data[1])"
+      ],
+      "metadata": {
+        "id": "KRfZtCCTK8ht"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd drive/MyDrive/Pytorch\\ NLP/GPT-2/data_in/gpt2_ckpt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LG3ehNgKKuDL",
+        "outputId": "8449d9bd-dd24-4811-bef4-e04a05a41650"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/Pytorch NLP/GPT-2/data_in/gpt2_ckpt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('corpus.txt','w') as f:\n",
+        "  for sent in temp:\n",
+        "    f.write(f'\\n {sent}')"
+      ],
+      "metadata": {
+        "id": "NaCJp9IsLLiV"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sentencepiece"
+      ],
+      "metadata": {
+        "id": "B2LJdAsrPbf7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://keep-steady.tistory.com/7"
+      ],
+      "metadata": {
+        "id": "mBkBxNqCSM2-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install sentencepiece"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "APOTeyaOOQYb",
+        "outputId": "b69ec0ad-f360-48de-895b-c258eccab0b5"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting sentencepiece\n",
+            "  Downloading sentencepiece-0.1.99-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: sentencepiece\n",
+            "Successfully installed sentencepiece-0.1.99\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sentencepiece as spm"
+      ],
+      "metadata": {
+        "id": "ZayDEQQtPgz3"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " spm.SentencePieceTrainer.train(input='corpus.txt',model_prefix='kor_tokenizer',vocab_size=50000, model_type='bpe',max_sentence_length=9999999,pad_id=0,unk_id=1,bos_id=2,eos_id=3)"
+      ],
+      "metadata": {
+        "id": "Z8G5cAI3PpbL"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### gluonnlp"
+      ],
+      "metadata": {
+        "id": "bCjotYQ6U329"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install gluonnlp==0.9.1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q_eJ6YVCUsNx",
+        "outputId": "0de2ae04-1e41-4cd0-b971-1fb51f940aba"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting gluonnlp==0.9.1\n",
+            "  Downloading gluonnlp-0.9.1.tar.gz (252 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m252.8/252.8 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (1.22.4)\n",
+            "Requirement already satisfied: cython in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (0.29.36)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (23.1)\n",
+            "Building wheels for collected packages: gluonnlp\n",
+            "  Building wheel for gluonnlp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gluonnlp: filename=gluonnlp-0.9.1-cp310-cp310-linux_x86_64.whl size=530292 sha256=9acf0f74a0ee0f964e24c3cf3f1a7f964fd64473ef97a4506e09490cc781eafb\n",
+            "  Stored in directory: /root/.cache/pip/wheels/fc/5b/9c/3295bb07f7c5544a96303a48988707816f44a536e8e1413922\n",
+            "Successfully built gluonnlp\n",
+            "Installing collected packages: gluonnlp\n",
+            "Successfully installed gluonnlp-0.9.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install mxnet"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "loTklEcsUykW",
+        "outputId": "329f9a28-715c-4794-e5ad-bfbf541622f8"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting mxnet\n",
+            "  Downloading mxnet-1.9.1-py3-none-manylinux2014_x86_64.whl (49.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.1/49.1 MB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy<2.0.0,>1.16.0 in /usr/local/lib/python3.10/dist-packages (from mxnet) (1.22.4)\n",
+            "Requirement already satisfied: requests<3,>=2.20.0 in /usr/local/lib/python3.10/dist-packages (from mxnet) (2.27.1)\n",
+            "Collecting graphviz<0.9.0,>=0.8.1 (from mxnet)\n",
+            "  Downloading graphviz-0.8.4-py2.py3-none-any.whl (16 kB)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (2023.5.7)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (3.4)\n",
+            "Installing collected packages: graphviz, mxnet\n",
+            "  Attempting uninstall: graphviz\n",
+            "    Found existing installation: graphviz 0.20.1\n",
+            "    Uninstalling graphviz-0.20.1:\n",
+            "      Successfully uninstalled graphviz-0.20.1\n",
+            "Successfully installed graphviz-0.8.4 mxnet-1.9.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gluonnlp as nlp"
+      ],
+      "metadata": {
+        "id": "r_dxlvufUgH8"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from gluonnlp.data import SentencepieceTokenizer"
+      ],
+      "metadata": {
+        "id": "wqO8iTs_VmDh"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = SentencepieceTokenizer('kor_tokenizer.model')"
+      ],
+      "metadata": {
+        "id": "Z90zoljwVxvv"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sp=spm.SentencePieceProcessor()\n",
+        "sp.Load('kor_tokenizer.model')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "quvfnYo9rqdD",
+        "outputId": "66ecbc62-830d-4220-eba7-feefc1818587"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sp.EncodeAsPieces('안녕하세요 저는 사람이에요.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MdcRqlOLrYr-",
+        "outputId": "db59ede4-058e-43ae-9ebd-4b1fdb83ab26"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['▁안녕하세요', '▁저는', '▁사람이', '에요', '.']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sp.encode('안녕하세요 저는 사람이에요.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s9ZNdSMwsE1T",
+        "outputId": "ea492c13-58a8-41fd-eb89-871bed372097"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[20363, 1619, 1047, 802, 48289]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab = nlp.vocab.BERTVocab.from_sentencepiece('kor_tokenizer.model')\n",
+        "# gluonnlp에서 sentnecnepice tokenizer에서 vocab을 직접적으로 가져올 수 있는 방법이 이 방법뿐\n",
+        "# => BERT가 아님에도 BERT 전용 Vocab을 사용. => 사용하는데 상관이 없기는 함."
+      ],
+      "metadata": {
+        "id": "BvjSsV04XKWv"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('<pad> :{}, <unk> :{} , <s> :{}, </s> :{} '.format(vocab['<pad>'],vocab['<unk>'],vocab['<s>'],vocab['</s>']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uf1TMOXiioo2",
+        "outputId": "bd036325-2776-4156-df71-c654baffd3d5"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<pad> :0, <unk> :1 , <s> :2, </s> :3 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### config & model_weight"
+      ],
+      "metadata": {
+        "id": "SgiJQ2gTQn-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "urllib.request.urlretrieve('https://huggingface.co/gpt2/resolve/main/config.json','config.json')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EeqjKoUcQs2X",
+        "outputId": "f4630f7e-722f-490c-98ca-fb15eaf06473"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('config.json', <http.client.HTTPMessage at 0x7fdd07c1ada0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "urllib.request.urlretrieve('https://huggingface.co/gpt2/resolve/main/model.safetensors','model.safetensors')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zXbpfCuvRWr2",
+        "outputId": "fe5048c1-24e1-4700-cc03-420c0ad62500"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('model.safetensors', <http.client.HTTPMessage at 0x7fdd07c19ed0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Top k & Top p"
+      ],
+      "metadata": {
+        "id": "0kjeBZ0bOhhq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ul44MevXOpW8",
+        "outputId": "4ff8d1be-2680-4d92-a75b-40ff05be23ad"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y3gxMcb8OxxL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
