--- a/Model/GPT_2/GPT2_GEN.ipynb
+++ b/Model/GPT_2/GPT2_GEN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1jLd3fgb_ouffcYMR_qbngEdXeBW7cdyx",
-      "authorship_tag": "ABX9TyPyKJxerUyf3PG7BDbfUeKh",
+      "authorship_tag": "ABX9TyM+spqgnsATEafnaUlSbAop",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "GAhQpLHSKpwQ"
       },
-      "execution_count": 21,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,19 +66,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FZGWRVyXKZjN",
-        "outputId": "31f36a49-3022-4dbc-8042-3da3bb39a9ad"
+        "outputId": "43deeb7d-662b-4026-e9ff-90473323c8a6"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('train.txt', <http.client.HTTPMessage at 0x7fdd6c8720e0>)"
+              "('train.txt', <http.client.HTTPMessage at 0x7ab0c9cbda20>)"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 2
         }
       ]
     },
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "_D-LYLxqLhUP"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "KRfZtCCTK8ht"
       },
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -118,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LG3ehNgKKuDL",
-        "outputId": "8449d9bd-dd24-4811-bef4-e04a05a41650"
+        "outputId": "0c6f4c97-5891-4854-ee35-ea7462af47e4"
       },
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "NaCJp9IsLLiV"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,9 +172,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "APOTeyaOOQYb",
-        "outputId": "b69ec0ad-f360-48de-895b-c258eccab0b5"
+        "outputId": "5f20aa5e-10fa-4c43-b7a7-f19713dc7747"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
           "text": [
             "Collecting sentencepiece\n",
             "  Downloading sentencepiece-0.1.99-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.3 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.3 MB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m19.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m15.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: sentencepiece\n",
             "Successfully installed sentencepiece-0.1.99\n"
           ]
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "ZayDEQQtPgz3"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "Z8G5cAI3PpbL"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,114 +223,6 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install gluonnlp==0.9.1"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q_eJ6YVCUsNx",
-        "outputId": "0de2ae04-1e41-4cd0-b971-1fb51f940aba"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting gluonnlp==0.9.1\n",
-            "  Downloading gluonnlp-0.9.1.tar.gz (252 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m252.8/252.8 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (1.22.4)\n",
-            "Requirement already satisfied: cython in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (0.29.36)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from gluonnlp==0.9.1) (23.1)\n",
-            "Building wheels for collected packages: gluonnlp\n",
-            "  Building wheel for gluonnlp (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gluonnlp: filename=gluonnlp-0.9.1-cp310-cp310-linux_x86_64.whl size=530292 sha256=9acf0f74a0ee0f964e24c3cf3f1a7f964fd64473ef97a4506e09490cc781eafb\n",
-            "  Stored in directory: /root/.cache/pip/wheels/fc/5b/9c/3295bb07f7c5544a96303a48988707816f44a536e8e1413922\n",
-            "Successfully built gluonnlp\n",
-            "Installing collected packages: gluonnlp\n",
-            "Successfully installed gluonnlp-0.9.1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install mxnet"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "loTklEcsUykW",
-        "outputId": "329f9a28-715c-4794-e5ad-bfbf541622f8"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting mxnet\n",
-            "  Downloading mxnet-1.9.1-py3-none-manylinux2014_x86_64.whl (49.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.1/49.1 MB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy<2.0.0,>1.16.0 in /usr/local/lib/python3.10/dist-packages (from mxnet) (1.22.4)\n",
-            "Requirement already satisfied: requests<3,>=2.20.0 in /usr/local/lib/python3.10/dist-packages (from mxnet) (2.27.1)\n",
-            "Collecting graphviz<0.9.0,>=0.8.1 (from mxnet)\n",
-            "  Downloading graphviz-0.8.4-py2.py3-none-any.whl (16 kB)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (1.26.16)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (2023.5.7)\n",
-            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (2.0.12)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.20.0->mxnet) (3.4)\n",
-            "Installing collected packages: graphviz, mxnet\n",
-            "  Attempting uninstall: graphviz\n",
-            "    Found existing installation: graphviz 0.20.1\n",
-            "    Uninstalling graphviz-0.20.1:\n",
-            "      Successfully uninstalled graphviz-0.20.1\n",
-            "Successfully installed graphviz-0.8.4 mxnet-1.9.1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import gluonnlp as nlp"
-      ],
-      "metadata": {
-        "id": "r_dxlvufUgH8"
-      },
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from gluonnlp.data import SentencepieceTokenizer"
-      ],
-      "metadata": {
-        "id": "wqO8iTs_VmDh"
-      },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "tokenizer = SentencepieceTokenizer('kor_tokenizer.model')"
-      ],
-      "metadata": {
-        "id": "Z90zoljwVxvv"
-      },
-      "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "sp=spm.SentencePieceProcessor()\n",
         "sp.Load('kor_tokenizer.model')"
       ],
@@ -339,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "quvfnYo9rqdD",
-        "outputId": "66ecbc62-830d-4220-eba7-feefc1818587"
+        "outputId": "e575380e-9212-4d32-bb94-4143a88ee985"
       },
-      "execution_count": 35,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +243,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 4
         }
       ]
     },
@@ -365,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MdcRqlOLrYr-",
-        "outputId": "db59ede4-058e-43ae-9ebd-4b1fdb83ab26"
+        "outputId": "8c0971e6-ddc0-4d5f-bf10-e560bca581cf"
       },
-      "execution_count": 54,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +269,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 5
         }
       ]
     },
@@ -391,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s9ZNdSMwsE1T",
-        "outputId": "ea492c13-58a8-41fd-eb89-871bed372097"
+        "outputId": "26106786-9628-4802-da3f-127bad8ad4e5"
       },
-      "execution_count": 55,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,42 +295,40 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "vocab = nlp.vocab.BERTVocab.from_sentencepiece('kor_tokenizer.model')\n",
-        "# gluonnlp에서 sentnecnepice tokenizer에서 vocab을 직접적으로 가져올 수 있는 방법이 이 방법뿐\n",
-        "# => BERT가 아님에도 BERT 전용 Vocab을 사용. => 사용하는데 상관이 없기는 함."
+        "vocab = [sp.id_to_piece(id) for id in range(sp.get_piece_size())]"
       ],
       "metadata": {
-        "id": "BvjSsV04XKWv"
+        "id": "G4ZIARzH8IM9"
       },
-      "execution_count": 38,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print('<pad> :{}, <unk> :{} , <s> :{}, </s> :{} '.format(vocab['<pad>'],vocab['<unk>'],vocab['<s>'],vocab['</s>']))"
+        "print('0 :{}, 1 :{} , 2 :{}, 3 :{} '.format(vocab[0],vocab[1],vocab[2],vocab[3]))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uf1TMOXiioo2",
-        "outputId": "bd036325-2776-4156-df71-c654baffd3d5"
+        "outputId": "1e7b247c-539a-43b7-d583-3d9034754402"
       },
-      "execution_count": 48,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<pad> :0, <unk> :1 , <s> :2, </s> :3 \n"
+            "0 :<pad>, 1 :<unk> , 2 :<s>, 3 :</s> \n"
           ]
         }
       ]
@@ -464,7 +354,7 @@
         "id": "EeqjKoUcQs2X",
         "outputId": "f4630f7e-722f-490c-98ca-fb15eaf06473"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +380,7 @@
         "id": "zXbpfCuvRWr2",
         "outputId": "fe5048c1-24e1-4700-cc03-420c0ad62500"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,34 +404,86 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### torch.multinomial"
+      ],
+      "metadata": {
+        "id": "tuhXFcHsBYNK"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch"
+      ],
+      "metadata": {
+        "id": "SP56xQAnBlXK"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weights= torch.Tensor([0,10,5,5])\n",
+        "weigths=torch.nn.Softmax()(weights)\n",
+        "torch.multinomial(weigths,10,replacement=True)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ul44MevXOpW8",
-        "outputId": "4ff8d1be-2680-4d92-a75b-40ff05be23ad"
+        "outputId": "bc8c3592-4f9f-45a3-df0a-bfb6cd50dde3"
       },
-      "execution_count": 53,
+      "execution_count": 70,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-70-63ac0e2f0888>:2: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  weigths=torch.nn.Softmax()(weights)\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 70
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def top_k_top_p_filtering(logits, top_k=0, top_p=0.0, filter_value=-99999):\n",
+        "  # logtis = (vocab_size, )\n",
+        "\n",
+        "  if top_k>0:\n",
+        "    top_k=min(top_k,logits.size()[-1])\n",
+        "    indices_to_remove=logits<torch.topk(logits,top_k).values[-1] # smaller than the smallest value among the top_k values\n",
+        "    logits[indices_to_remove]=filter_value\n",
+        "\n",
+        "  if top_p>0.0:\n",
+        "\n"
+      ],
       "metadata": {
         "id": "Y3gxMcb8OxxL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fY_mWxdmOCax"
       },
       "execution_count": null,
       "outputs": []
